7/14/2006 - jdiamond
====================

 * (trac #73) Fixed a foreach() warning that resulted when deleting invoices

7/13/2006 - jdiamond
====================

 * (trac #60) Completed work on an Authorize.net module.
 * Fixed an undocumented bug involving invalid payment type's when receiving a payment manually

7/8/2006 - jdiamond
====================

 * Add a "Null Registrar" module to be used when the HSP is using a domain registrar that is not supported
 * Support for domain transfers and domain renewals
 * Completed all major functions of the Order interface.  Minor touch-ups remain.

 *** PLEASE NOTE: this commit contains a new database scheme ***

6/29/2006 - jdiamond
====================

 * (trac #15) Removed new-lines from the end of PHP files and converted files with DOS new-lines to Unix.

6/26/2006 - jdiamond
====================

 * (trac #63) Bundled Smarty with SolidWorks

 *** PLEASE NOTE: this commit contains a new database scheme ***

6/8/2006 - jdiamond
====================

 * Support for Payment Processor modules

 * A Paypal Web Payments Standard module

 * Complete checkout process for the Order interface

 *** PLEASE NOTE: this commit contains a new database scheme ***

5/29/2006 - jdiamond
====================

 * Implemented a new Modules framework.

 * Developed a new Reseller Club / Directi Module to fit the new Modules framework

 *** PLEASE NOTE: this commit contains a new database scheme ***

5/16/2006 - jdiamond
====================

 * (issue #49) Portuguese translation for the Manager interface (provided by Ivo Monteiro aka SniperPT)

5/14/2006 - jdiamond
====================

 * On 5/12/2006, SourceForge.net upgraded their CVS infrastructure.  This commit brings my latest codebase into the repository
   and updates my working copy to reflect the changes made during the upgrade.

5/7/2006 - jdiamond
====================

 * Removed config.inc.php from the source tree and added config.template.

4/24/2006 - jdiamond